# swpp-2023-project-team-8

./: AddFriendActivity.kt  README.md
.github/: CODEOWNERS
.github/workflows/: buf-generate.yml  ci.yml  deploy-backend.yml  deploy-ml.yml
backend/: .gitignore  Gemfile  README.md  docker-compose.yml
backend/app/controllers/: access_controller.rb  application_controller.rb  authentication_controller.rb  check_ins_controller.rb  friends_controller.rb  friendships_controller.rb  meet_ups_controller.rb  missions_controller.rb  places_controller.rb  users_controller.rb  verification_mails_controller.rb
backend/app/mailers/: mail_verification_token_mailer.rb
backend/app/models/: check_in.rb  friendship.rb  mail_verification_token.rb  meet_up.rb  mission.rb  place.rb  region.rb  user.rb  user_meet_up.rb  user_mission.rb
backend/app/serializers/: check_in_serializer.rb  meet_up_serializer.rb  mission_serializer.rb  place_serializer.rb  user_serializer.rb
backend/app/services/: list_place.rb  (+1 more)
backend/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
backend/db/: schema.rb
backend/lib/: hash_utils.rb  http_client.rb
backend/spec/: hash_utils_spec.rb  rails_helper.rb
frontend/: build.gradle.kts
frontend/app/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
idl/: README.md  buf.gen.yaml
ml/: Dockerfile  README.md  grpc_server.py  main.py  pyproject.toml
ml/data/: clustered_output.txt  snuspots_latlon.txt
ml/src/: infer.py  utils.py
ml/swpp/v1/: place_pb2.py
ml/tests/: example_test.py  utils_test.py
(+181 files in other folders)
